k8s/base/live-control-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-control-service
  namespace: olivelive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-control-service
  template:
    metadata:
      labels:
        app: live-control-service
    spec:
      containers:
        - name: live-control-service
          image: 890742607521.dkr.ecr.ap-northeast-2.amazonaws.com/live-control-service:prod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: live-control-service
  namespace: olivelive
spec:
  selector:
    app: live-control-service
  ports:
    - port: 8080
      targetPort: 8080
